# LeakFlow

./: .clangd  .gitignore  .lldbinit  AGENTS.md  CMakeLists.txt  README.md  ROADMAP.md  TESTING.md  to_get_context.txt  torch_lldb.py
.devcontainer/: Dockerfile  (+1 more)
examples/: APP_SRC_HDF5_TUTORIAL.md  CMakeLists.txt  app_src_hdf5_tutorial.cpp  pipeline_expression_plot_tutorial.cpp  trace_plot_tutorial.cpp
replications/: CMakeLists.txt
replications/Zer0Leak/: ATTACK.md  IMPLEMENTATION.md
replications/Zer0Leak/confusion_aware_joint_hw/: ATTACK.md  IMPLEMENTATION.md
replications/rezaeezade_2025_blindfold/: CMakeLists.txt  GMM_COMPARISON.md  README.md
replications/rezaeezade_2025_blindfold/src/: poi_finder_main.cpp
src/apps/: CMakeLists.txt
src/apps/common/: terminal_pager.cpp  terminal_pager.hpp
src/apps/cuda_smoke/: leakflow_cuda_smoke.cu
src/apps/leakflow/: leakflow_cli.cpp  leakflow_cli.hpp  main.cpp
src/apps/leakflow_ls/: main.cpp
src/base/: CMakeLists.txt  numeric_caps.cpp  plot_annotation_payload.cpp  statistics.cpp  torch_tensor_bundle_payload.cpp  torch_tensor_payload.cpp
src/core/: CMakeLists.txt  buffer.cpp  buffer_queue.cpp  caps.cpp  channels.cpp  descriptor.cpp  descriptor_registry.cpp  element.cpp  element_factory_registry.cpp  metadata_forwarding.cpp  pad.cpp  payload.cpp  payload_codec.cpp  pipeline.cpp  pipeline_observer.cpp  pipeline_segments.cpp  pipeline_session.cpp  property.cpp  provenance.cpp  queue_epoch_policy.cpp  summary_document.cpp  telemetry_trace.cpp  units.cpp  version.cpp
src/crypto/: CMakeLists.txt  aes.cpp  hamming.cpp
src/debug/: CMakeLists.txt  tensor_debug.cpp
src/extras/: CMakeLists.txt  hdf5_buffer_archive.cpp  hdf5_tensor_dataset_reader.cpp  numpy_payload.cpp  numpy_to_torch.cpp  tensor_dataset_reader.cpp
src/log/: CMakeLists.txt  logger.cpp
src/ml/: CMakeLists.txt  clustering_evaluation.cpp  clustering_metrics.cpp  gaussian_mixture.cpp  sinkhorn.cpp
src/plot/: CMakeLists.txt  heatmap_view.cpp  imgui_plot_loop.cpp  pipeline_graph.cpp  plot_render_util.cpp  plot_render_util.hpp  plot_runtime.cpp  poi_table_view.cpp  score_view.cpp  table_view.cpp  trace_view.cpp
src/plugins/base/: CMakeLists.txt  app_src.cpp  base_plugin_constants.hpp  descriptor_catalog.cpp  fake_live_src.cpp  torch_convert.cpp  torch_file_sink.cpp  torch_file_src.cpp
src/plugins/core/: CMakeLists.txt  buffer_file_manifest.hpp  buffer_file_sink.cpp  buffer_file_src.cpp  buffer_summary.cpp  bytes_payload.cpp  core_plugin_constants.hpp  descriptor_catalog.cpp  fake_sink.cpp  fake_src.cpp  file_sink.cpp  file_src.cpp  property_helpers.hpp  queue.cpp  summary.cpp  sync.cpp  tee.cpp
src/plugins/crypto/: CMakeLists.txt  aes_leakage.cpp  aes_leakage_hypothesis.cpp  attack_payload.cpp  attack_stats.cpp  attack_stats_to_plot_annotations.cpp  correlation_payload.cpp  correlation_poi_payload.cpp  correlation_poi_to_indexes.cpp  correlation_poi_to_plot_annotations.cpp  cpa_attack.cpp  cpa_attack_payload.cpp  cpa_attack_stats.cpp  cpa_attack_stats_to_plot_annotations.cpp  crypto_plugin_constants.hpp  descriptor_catalog.cpp  dpa_attack.cpp  hw_class.cpp  pearson_correlator.cpp  pearson_poi_finder.cpp  poi_correlation.cpp  poi_select.cpp
src/plugins/crypto_plot/: CMakeLists.txt  crypto_plot_plugin_constants.hpp  descriptor_catalog.cpp  poi_table_plot.cpp  score_plot.cpp  score_table_plot.cpp
src/plugins/extras/: CMakeLists.txt  buffer_file_sink.cpp  buffer_file_src.cpp  descriptor_catalog.cpp  fake_live_hdf5_src.cpp  hdf5_file_src.cpp  hdf5_source_common.cpp  hdf5_source_common.hpp  numpy_src.cpp  numpy_to_torch.cpp
src/plugins/ml/: CMakeLists.txt  clustering_evaluate.cpp  clustering_evaluation_payload.cpp  clustering_stats.cpp  descriptor_catalog.cpp  feature_select.cpp  gaussian_mixture_element.cpp  ml_plugin_constants.hpp
src/plugins/ml_plot/: CMakeLists.txt  clustering_metrics_table_plot.cpp  descriptor_catalog.cpp  ml_plot_plugin_constants.hpp
src/plugins/plot/: CMakeLists.txt  descriptor_catalog.cpp  heatmap_plot.cpp  plot_plugin_constants.hpp  trace_plot.cpp
src/render/: CMakeLists.txt  summary_renderer.cpp  terminal_style.cpp
tests/: CMakeLists.txt
tests/apps/: CMakeLists.txt  cli_syntax_test.cpp
tests/base/: CMakeLists.txt  plot_annotation_payload_test.cpp  statistics_test.cpp  torch_tensor_bundle_payload_test.cpp  torch_tensor_payload_test.cpp
tests/core/: CMakeLists.txt  aggregator_latest_test.cpp  buffer_payload_ownership_test.cpp  buffer_queue_test.cpp  buffer_test.cpp  caps_test.cpp  descriptor_test.cpp  element_factory_registry_test.cpp  element_pad_test.cpp  element_property_test.cpp  element_test.cpp  linear_pipeline_link_test.cpp  linear_pipeline_test.cpp  metadata_forwarding_test.cpp  pad_test.cpp  payload_test.cpp  pipeline_observer_test.cpp  pipeline_segments_test.cpp  pipeline_session_test.cpp  profiling_test.cpp  property_test.cpp  smoke_test.cpp  threaded_pause_test.cpp  threaded_runner_test.cpp  threaded_safe_point_test.cpp  units_test.cpp  vector_clock_test.cpp
tests/crypto/: CMakeLists.txt  aes_leakage_test.cpp  hamming_test.cpp
tests/extras/: CMakeLists.txt  hdf5_tensor_dataset_reader_test.cpp  numpy_payload_test.cpp  numpy_to_torch_test.cpp
tests/fixtures/aes/: README.md
tests/log/: CMakeLists.txt  logger_test.cpp
tests/ml/: CMakeLists.txt  clustering_evaluation_test.cpp  clustering_metrics_test.cpp  gaussian_mixture_test.cpp  sinkhorn_test.cpp
tests/plugins/base/: CMakeLists.txt  app_src_test.cpp  fake_live_src_test.cpp  torch_convert_test.cpp  torch_file_io_test.cpp
tests/plugins/core/: CMakeLists.txt  buffer_file_test.cpp  core_elements_test.cpp  sync_test.cpp  sync_threaded_test.cpp  tee_test.cpp
tests/plugins/crypto/: CMakeLists.txt  aes_leakage_hypothesis_test.cpp  aes_leakage_test.cpp  aes_poi_correctness_test.cpp  attack_stats_to_plot_annotations_test.cpp  correlation_poi_to_indexes_test.cpp  cpa_attack_test.cpp  dpa_attack_test.cpp  hw_class_test.cpp  pearson_poi_finder_test.cpp  poi_correlation_test.cpp  poi_split_test.cpp
tests/render/: CMakeLists.txt  summary_renderer_test.cpp
(+198 files in other folders)
